more decoration is done

--- a/main.css
+++ b/main.css
@@ -15,20 +15,20 @@ p1 {
     margin-left: 20px;
 }
 
-h1
-.special {
-    color: #FF0000;
+h3
+{
+    color: #4747d1;
 }
 p
 {
     color #00B4CC;
 }
 #primary-nav{
-    background-color:#563d7c !important;
+    background-color:#660044 !important;
 }
 #purple-button{
-    border-color: #563d7c;
-    color: #563d7c;
+    border-color: red;
+    color: green;
 }
 #purple-button:hover{
     background-color: #563d7c;
