--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
 
 
-@import url(https://scontent-atl3-1.xx.fbcdn.net/v/t1.0-9/20953438_10159158749020317_6553301253367602145_n.jpg?oh=621a4996ad2729fd6a6a92d61b0012f9&oe=5AA9B10A)
 
+h1 {
+    color: blue;
+}
+p {
+    color: white;
+}
 body {
-    background-color: green;
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(JohnMurk.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
 }
 
 h1 {
@@ -11,7 +19,7 @@ h1 {
     margin-left: 20px;
 }
 p1 {
-    color: red;
+    color: white;
     margin-left: 20px;
 }
 
@@ -32,7 +40,7 @@ p
 }
 #purple-button:hover{
     background-color: #563d7c;
-    color: white;
+    color: white;}
 
 /*
 {
